# docker-automation

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.deploy  README.md  alembic.ini  docker-compose.yml  fix_and_start.sh  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml  deploy.yml
alembic/: env.py
migrations/: env.py
migrations/versions/: 075b17b26f77_change_sip_calls_room_id_from_uuid_to_.py  0d7f6660b9d3_add_is_deleted_to_sip_trunks_and_sip_.py  135ab6251787_initial_tables.py  17ea788598a0_add_is_deleted_flag_for_soft_deletes_on_.py  1b2d69dc269d_change_room_id_in_connections_table_to_.py  214db69f796a_change_room_id_in_sip_calls_table_to_.py  2e696d1b8cea_fix_agentknowledgemapping_primary_key_.py  37423d2bc44b_create_call_logs_table_and_add_is_.py  3917d0fe7801_add_cascade_delete_to_documents_table.py  3fa53a651f39_create_connections_table_and_add_.py  4160d581fc26_add_token_blacklist_table.py  4ce3a1d0277a_add_provider_tables_and_update_agent_.py  5ded2931ce14_add_provider_column_to_llm_providers_.py  632ea0c94fb2_add_call_id_to_connections_table.py  64c866508d17_add_is_deleted_to_agent_profile_and_.py  6da8fbf3a949_add_is_verified_to_user.py  79e21ad17db1_add_on_delete_cascade_to_agent_profiles_.py  82a54eae4871_add_call_logs_table.py  86d872174ae6_add_is_record_to_connections_table.py  adddba93f811_change_room_id_in_sip_calls_table_to_.py  cceffa76e8e3_add_knowledge_bases_data_column_to_.py  d8ac5af8429b_add_created_at_and_updated_at_columns_.py
src/: alembic.ini  generate_token.py  test_sendgrid.py
src/app/: main.py
src/app/api/: dependencies.py
src/app/api/v1/: __init__.py  agent_functions.py  agent_knowledge.py  agent_profiles.py  call_logs.py  connections.py  function_tool.py  knowledge_base.py  livekit.py  login.py  logout.py  sip.py  (+6 more)
src/app/core/: config.py  events.py  livekit_worker.py  qdrant_client.py  schemas.py  security.py  setup.py
src/app/crud/: crud_agent_profiles.py  crud_agent_reference.py  crud_call_logs.py  crud_connections.py  crud_documents.py  crud_function_tool.py  crud_providers.py  crud_sip.py  crud_users.py
src/app/models/: __init__.py  agent_profile.py  call_logs.py  connections.py  document.py  function_tool.py  providers.py  sip.py  user.py
src/app/schemas/: agent_profile.py  agent_reference.py  call_logs.py  connections.py  document.py  function_tool.py  llm_model.py  provider_types.py  providers.py  sip.py  user.py
src/app/services/: agent_profile.py  agent_rag.py  agents.py  audio_frame_utils.py  auth_utils.py  background_audio_source.py  document_processor.py  embedding_service.py  function_executor.py  function_integration.py  livekit_agent.py  provider_factory.py  sip_call_handler.py  sip_call_manager.py  sip_factory.py  vector_search.py  voice.py
src/app/utils/: db_utils.py
src/app/workers/: voice_agent.py
src/migrations/versions/: dd4df3939127_initial_migration.py
src/scripts/: create_first_superuser.py  fix_redis_config.py  run_migrations.sh  seed_providers.py  start.sh
static/: index.html
static/data/: test-script.py  voices.json
tests/: test_user.py
(+2 files in other folders)
